kubernetes/apps/storage/minio/ingress.yaml
# minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: internal
  rules:
  - host: minio.wakkalabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
  tls:
  - hosts:
    - minio.wakkalabs.com
    secretName: minio-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: storage
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: internal
  rules:
  - host: console.wakkalabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 9001
  tls:
  - hosts:
    - console.wakkalabs.com
    secretName: console-tls
